--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body * {
 }
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 #container {
   width: 100%;
@@ -140,4 +141,13 @@ footer {
   padding: 24px 0px;
   text-align: center;
   font-size: 14px;
+}
+/*media queries*/
+@media(min-width:700px){
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  :light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
