--- a/style.css
+++ b/style.css
@@ -73,14 +73,14 @@ body {
   z-index: 1;
   transform: translateY(-50%);
   cursor: pointer;
+  animation: slide-back 0.2s;
 }
 #switch button:hover {
   border: 8px solid var(--switch-highlight-color);
   box-shadow: 0px 0px 8px 0.81px var(--switch-stroke-color);
 }
 .light #switch button {
-  left: initial;
-  right: 0;
+  animation: slide-in 0.2s forwards;
 }
 #switch span {
   display: block;
@@ -147,7 +147,24 @@ footer {
   :root{
     --bg-url: url(./assets/bg-desktop.jpg);
   }
-  :light{
+  .light{
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+/*animation*/
+@keyframes slide-in {
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+@keyframes slide-back {
+  from{
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
