change in outline

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 #switch button:hover {
   /* border: 8px solid var(--switch-highlight-color);
   box-shadow: 0px 0px 8px 0.81px var(--switch-stroke-color); */
-  outline: 8px solid var(--switch-highlight-color);
+  outline: 8px solid var(--highlight-color);
 }
 .light #switch button {
   animation: slide-in 0.2s forwards;
