--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body * {
   color: var(--text-color);
 }
 body {
-  background: var(--bg-url) no-repeat top center;
+  background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
 #container {
@@ -144,7 +144,7 @@ footer {
   font-size: 14px;
 }
 /*media queries*/
-@media(min-width:700px){
+@media(min-width: 700px){
   :root{
     --bg-url: url(./assets/bg-desktop.jpg);
   }
