--- a/style.css
+++ b/style.css
@@ -45,9 +45,7 @@ body {
   padding: 24px;
 }
 #profile img {
-  display: block;
   width: 112px;
-  margin: auto;
 }
 #profile p {
   font-weight: 500px;
@@ -131,7 +129,7 @@ ul li a:hover {
   align-items: center;
   justify-content: center;
   padding: 16px;
-  transition: background 0.2px;
+  transition: background 0.2s;
   border-radius: 50%;
 }
 #sociallinks a:hover {
