--- a/style.css
+++ b/style.css
@@ -3,68 +3,78 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 :root {
   --text-color: white;
-  --bg-url: url(./assets/bg-Mobile.png);
+  --bg-url: url(./assets/bg-Mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
-  --surface-color: rgba(255, 255, 255, 0.1);
-  --surface-color-hover: rgba(255, 255, 255, 0.2);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
   --switch-highlight-color: rgba(8, 7, 7, 0.2);
-  --switch-stroke-color: rgba(199,189,199,1);
-  --switch-bg: url(./assets/moon-stars.svg);
+  --switch-stroke-color: rgba(199, 189, 199, 1);
+  --switch-bg-url: url(./assets/moon-stars.svg);
 }
+
 .light {
   --text-color: black;
+  --bg-url: url(./assets/bg-Mobile-Light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
-  --surface-color: rgba(255, 255, 255, 0.05);
-  --surface-color-hover: rgba(0, 0, 0, 0.2);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
-  --switch-highlight-color: rgba(0, 0, 0, 0.10);
+  --switch-highlight-color: rgba(0, 0, 0, 0.1);
   --switch-stroke-color: rgba(92, 89, 89, 0.418);
-  --bg-url: url(./assets/bg-Mobile-Light.png);
-  --switch-bg: url(./assets/sun.svg);
+  --switch-bg-url: url(./assets/sun.svg);
+}
+
+body {
+  background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
 }
-body {
-  background: var(--bg-url) no-repeat top center/cover;
-  height: 100vh;
-}
+
 #container {
   width: 100%;
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
+
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
 }
+
 #profile img {
   width: 112px;
 }
+
 #profile p {
   font-weight: 500px;
   line-height: 24px;
   margin-top: 8px;
 }
 
-/*switch dark mode*/
+/* switch */
 #switch {
   position: relative;
   width: 64px;
   margin: 4px auto;
 }
+
 #switch button {
   width: 32px;
   height: 32px;
-  background: white var(--switch-bg) no-repeat center;
+  background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
+
   position: absolute;
   top: 50%;
   left: 0;
@@ -73,25 +83,29 @@ body {
   cursor: pointer;
   animation: slide-back 0.2s;
 }
+
+.light #switch button {
+  animation: slide-in 0.2s forwards;
+}
+
 #switch button:hover {
   /* border: 8px solid var(--switch-highlight-color);
   box-shadow: 0px 0px 8px 0.81px var(--switch-stroke-color); */
   outline: 8px solid var(--highlight-color);
 }
-.light #switch button {
-  animation: slide-in 0.2s forwards;
-}
+
 #switch span {
   display: block;
-
   width: 64px;
   height: 24px;
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
 }
-/*Links*/
+
+/* links */
 ul {
   list-style: none;
   display: flex;
@@ -99,71 +113,89 @@ ul {
   gap: 16px;
   padding: 24px 0;
 }
+
 ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 52px;
-  padding: 56px 24px;
+  padding: 16px 24px;
+
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
+
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+
   text-decoration: none;
   font-weight: 500;
+
   transition: background 0.2s;
 }
+
+/* pseudo-selector */
 ul li a:hover {
   background: var(--surface-color-hover);
-  border: 1px solid var(--text-color);
+  border: 1.5px solid var(--text-color);
 }
-#sociallinks {
+
+/* social links */
+#social-links {
   display: flex;
   justify-content: center;
-  padding: 24px 0px;
+
+  padding: 24px 0;
+
   font-size: 24px;
 }
-#sociallinks a {
+
+#social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 16px;
+
   transition: background 0.2s;
   border-radius: 50%;
 }
-#sociallinks a:hover {
+
+#social-links a:hover {
   background: var(--highlight-color);
-  padding: 16px;
 }
+
 footer {
-  padding: 24px 0px;
+  padding: 24px 0;
   text-align: center;
   font-size: 14px;
 }
-/*media queries*/
-@media(min-width: 700px){
-  :root{
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
-  .light{
+
+  .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
-/*animation*/
+
+/* animation */
 @keyframes slide-in {
-  from{
+  from {
     left: 0;
   }
-  to{
+  to {
     left: 50%;
   }
 }
+
 @keyframes slide-back {
-  from{
+  from {
     left: 50%;
   }
-  to{
+  to {
     left: 0;
   }
 }
