--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
   --text-color: white;
-  --bg-url: url(./assets/bg-Mobile.jpg);
+  --bg-url: url(./assets/bg-Mobile.png);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -18,7 +18,7 @@
 
 .light {
   --text-color: black;
-  --bg-url: url(./assets/bg-Mobile-Light.jpg);
+  --bg-url: url(./assets/bg-Mobile-Light.png);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -29,7 +29,7 @@
 }
 
 body {
-  background: var(--bg-url) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center;
   height: 100vh;
 }
 
@@ -179,6 +179,15 @@ footer {
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
+  ul li a{
+    padding: 36px 24px;
+  }
+}
+@media(height: 1368px){
+  body {
+  background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
+}
 }
 
 /* animation */
